[package]
name = "map-to-javascript-html"
version = "1.2.3"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2018"
repository = "https://github.com/magiclen/map-to-javascript-html"
homepage = "https://magiclen.org/map-to-javascript-html"
keywords = ["hashmap", "javascript", "html", "web", "serialization"]
categories = ["parser-implementations"]
description= "A library for serializing a (hash) map to JavaScript code in HTML usually for dynamically generating strings on web pages."
readme = "README.md"
license = "MIT"

[badges.travis-ci]
repository = "magiclen/map-to-javascript-html"
branch = "master"

[dependencies]
regex = "1"
lazy_static = "1.1"