[package]
name = "map-to-javascript-html"
version = "2.0.2"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2018"
repository = "https://github.com/magiclen/map-to-javascript-html"
homepage = "https://magiclen.org/map-to-javascript-html"
keywords = ["map", "javascript", "html", "hashmap", "btreemap"]
categories = ["no-std", "encoding"]
description= "A library for serializing a map to JavaScript code in HTML usually for dynamically generating strings on web pages."
readme = "README.md"
license = "MIT"
include = ["src/**/*", "Cargo.toml"]

[badges.travis-ci]
repository = "magiclen/map-to-javascript-html"
branch = "master"

[dependencies]
html-escape = "0.2"

serde_json = { version = "1", optional = true }

[features]
default = ["std"]
std = []

serde = ["serde_json"]

[package.metadata.docs.rs]
all-features = true